Replaced old implementation with updated clean project version